Archive2/48/ce6b2d280a9276/output
main.cpp: In function 'int main()':
main.cpp:16:3: error: no 'operator++(int)' declared for postfix '++' [-fpermissive]
  x++;
   ^
